--- a/index.html
+++ b/index.html
@@ -9,9 +9,29 @@
 
 <body>
 
+    <div class="box">
+        <div class="elements">
+            <h1>M1000</h1>
+        </div>
+        <div class="img">
+            <img src="img.GIF" alt="ing">
+        </div>
 
+        <div class="elements1">
+            <div class="body">
+                <p><box-icon name='telegram' type='logo' color='#1da3ff'></box-icon> @M1000_root</p>
+                <p><box-icon type='logo' color='#0074de' name='vk'></box-icon> m1000_root</p>
+                <p><box-icon type='logo' name='github'></box-icon> ZeroTwo-coder</p>
+            </div>
+
+        </div>
+        <div class="card"></div>
+    </div>
 
     <script type="module" src="/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.8.0/vanilla-tilt.min.js"
+        integrity="sha512-RX/OFugt/bkgwRQg4B22KYE79dQhwaPp2IZaA/YyU3GMo/qY7GrXkiG6Dvvwnds6/DefCfwPTgCXnaC6nAgVYw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 </html>
